<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">Extensions+</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="icons_category">Icons</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="status_bar_category_summary">Tweak Statusbar element</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="notifications_panel_category_summary">Customize Qs Panel And Notification</string>
    <string name="system_category">System</string>
    <string name="system_category_summary">Change the System Element</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lockscreen_category_summary">Its About LockscreenUi</string>
    <string name="navigation_and_recents_category">Navigation</string>
    <string name="navigation_and_recents_category_summary">Customize Navigation And Gesture</string>
    <string name="build_tweaks_summary_title">Extend your device!</string>
    <string name="listview">ListView</string>
    <string name="light_category">Lights</string>
    <string name="udfps_category">UDFPS</string>
    <string name="buttons_title">Buttons</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="general_category">General</string>
    <string name="misc_extensions_title">Misc Extensions</string>
    <string name="gzone_category">Game Zone</string>
    <string name="navigationbar_settings_title">Navigation Bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="customisation_title">Customisation</string>
    <string name="battery_title">Battery</string>
    <string name="battery_category">Battery tweaks</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_advanced">Advanced reboot options</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="powermenu_emergency">Emergency</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Music control</string>
    <string name="volume_rocker_music_controls_summary">Long press volume buttons to switch tracks while screen off</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_volume_keys_title">Volume rocker</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="lockscreen_power_menu_disabled_title">Disable power menu on lock screen</string>
    <string name="lockscreen_power_menu_disabled_summary">This will only disable the power menu on secure lock screens</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Customise heads up notifications settings</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="monet_category">Color Decorations</string>
    <string name="monet_engine_summary">Lets Make It Colorfull</string>
    <string name="use_photos_spoof_title">Unlimited Photos storage</string>
    <string name="use_photos_spoof_summary">Spoof your device as Pixel XL for Google Photos app only to provide unlimited storage for backup</string>
    <string name="use_games_spoof_title">Unlock higher FPS in games</string>
    <string name="use_games_spoof_summary">Spoof your device as different model for specific games to unlock higher FPS</string>
    <string name="pie_animation_style_title">Android P animation style</string>
    <string name="pie_animation_style_summary">Enable Android P \"Default\" animations</string>
    <string name="gaming_mode_title">Gaming Mode</string>
    <string name="gaming_mode_summary">Extra features for immersive gaming experience</string>
</resources>