<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2023 AfterLife Prjkt

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

 <PreferenceScreen android:title="@string/extensions_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceScreen
        android:key="ext_plus_animation"
        android:layout="@layout/ext_plus"
        android:selectable="false" />

    <Preference 
        android:icon="@drawable/ic_customisation" 
        android:title="@string/monet_category" 
        android:key="monet_engine" 
        android:summary="@string/monet_engine_summary" 
        android:fragment="org.aospextended.extensions.fragments.MonetEngine" 
        settings:layout="@layout/xd_pref_card_top_icon" />
    
    <Preference 
        android:icon="@drawable/ic_status_bar_category" 
        android:title="@string/status_bar_category" 
        android:summary="@string/status_bar_category_summary"
        android:key="status_bar_new" 
        android:fragment="org.aospextended.extensions.fragments.StatusBarx" 
        settings:layout="@layout/xd_pref_card_mid_icon" />
    <Preference 
        android:icon="@drawable/ic_notifications_panel_category" 
        android:title="@string/notifications_panel_category" 
        android:summary="@string/notifications_panel_category_summary"
        android:key="notifications_panel_new" 
        android:fragment="org.aospextended.extensions.fragments.NotificationsPanelx" 
        settings:layout="@layout/xd_pref_card_mid_icon" />
    <Preference 
        android:icon="@drawable/ic_navigation_and_recents_category" 
        android:title="@string/navigation_and_recents_category" 
        android:summary="@string/navigation_and_recents_category_summary"
        android:key="navigation_and_recents_new" 
        android:fragment="org.aospextended.extensions.fragments.NavigationAndRecentsx" 
        settings:layout="@layout/xd_pref_card_mid_icon" />
    <Preference 
        android:icon="@drawable/ic_lockscreen_category" 
        android:title="@string/lockscreen_category" 
        android:summary="@string/lockscreen_category_summary"
        android:key="lockscreen_new" 
        android:fragment="org.aospextended.extensions.fragments.Lockscreenx" 
        settings:layout="@layout/xd_pref_card_mid_icon" />
    <Preference 
        android:icon="@drawable/ic_system_category" 
        android:title="@string/system_category" 
        android:summary="@string/system_category_summary"
        android:key="system_new" 
        android:fragment="org.aospextended.extensions.fragments.Systemx" 
        settings:layout="@layout/xd_pref_card_bot_icon" />
</PreferenceScreen>